--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "chart.js": "^3.7.1",
+    "next": "^12.0.8",
+    "next-auth": "^4.3.4",
+    "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4"
+    "eslint": "8.7.0",
+    "eslint-config-next": "^12.0.8"
   }
 }
